Fix close button not being visible in sidemenu

--- a/assets/base.css
+++ b/assets/base.css
@@ -719,6 +719,7 @@ sidebar-navigation h2 {
   transform-origin: center center;
   background: var(--background-lightest);
   border-radius: 2em;
+  z-index: 1;
 }
 
 [data-action="close-sidemenu"] svg {
